Fixed mobile version of the website

--- a/pages/main/elections.html
+++ b/pages/main/elections.html
@@ -13,13 +13,13 @@
             <h3 id="homeButtonText">Canadian Elections</h3>
         </div>
         <div>
-            <button id="button1867" onclick=load1867Election()>1867 Election</button>
+            <button id="button1867" onclick=load1867Election()>1867</button>
         </div>
         <div>
-            <button id="button2019" onclick=load2019Election()>2019 Election</button>
+            <button id="button2019" onclick=load2019Election()>2019</button>
         </div>
         <div>
-            <button id="button2021" onclick=load2021Election()>2021 Election</button>
+            <button id="button2021" onclick=load2021Election()>2021</button>
         </div>
         <div>
             <button id="aboutButton" onclick=loadAbout()>About</button>
