--- a/pages/main/elections.html
+++ b/pages/main/elections.html
@@ -25,7 +25,7 @@
             <button id="aboutButton" onclick=loadAbout()>About</button>
         </div>
     </div>
-    <iframe id="iframe" src="../elections/election1867.html" type="text/html" scrolling="no"></iframe>
+    <iframe id="iframe" src="../elections/election1867.html" type="text/html" scrolling="no" style="overflow:hidden"></iframe>
     <div id="current_election_text">1867</div>
 </body>
 </html>
