Fixed hyperlink in about page, and fixed white line on right side of screen in elections_style.css

--- a/pages/main/about.html
+++ b/pages/main/about.html
@@ -13,7 +13,7 @@
         <p class="aboutParagraph">
             Huge thanks to Dr. Jack Lucas, Dr. Zach Taylor, and Dr. Dave Armstrong and their team for creating and publishing the shapefiles for every federal district of every election in Canadian history.
         </p>
-        <a class="aboutParagraph" href="https://borealisdata.ca/file.xhtml?fileId=449029&version=2.0">
+        <a class="aboutParagraph" href="https://borealisdata.ca/file.xhtml?fileId=449029&version=2.0" target="_blank">
             You can find their data here
         </a>
         <p class="aboutParagraph">
