Updated Dockerfile to make canadianelections.net automatically redirect to /pages/main/elections.html, also updated the website files to be compatible with this change. Everything is production ready now!

--- a/pages/main/elections.html
+++ b/pages/main/elections.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Canadian Elections</title>
-    <link rel="stylesheet" href="elections_style.css">
-    <script src="elections_functions.js"></script>
+    <link rel="stylesheet" href="/main/elections_style.css">
+    <script src="/main/elections_functions.js"></script>
 </head>
 <body>
     <div id="mainBanner">
@@ -25,7 +25,7 @@
             <button id="aboutButton" onclick=loadAbout()>About</button>
         </div>
     </div>
-    <iframe id="iframe" src="../elections/election1867.html" type="text/html" scrolling="no" style="overflow:hidden"></iframe>
+    <iframe id="iframe" src="/elections/election1867.html" type="text/html" scrolling="no" style="overflow:hidden"></iframe>
     <div id="current_election_text">1867</div>
 </body>
 </html>
