Added description and keywords to elections.html. Created a sitemap and copied it to the container, added a path to it

--- a/pages/main/about.html
+++ b/pages/main/about.html
@@ -19,6 +19,9 @@
         <p class="aboutParagraph">
             For newer elections (2019 and 2021), voting data and shapefiles were retreived from Elections Canada.
         </p>
+        <p class="aboutParagraph">
+            If you notice a mistake, please send an email to support@canadianelections.net
+        </p>
     </div>
 </body>
 </html>
