--- a/pages/main/elections.html
+++ b/pages/main/elections.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Maps for all Canadian elections, see results for a federal election">
+    <meta name="keywords" content="canadian, elections, maps, 1867, 1872, 1874, 2019, 2021, federal, results">
     <title>Canadian Elections</title>
     <link rel="stylesheet" href="/main/elections_style.css">
     <script src="/main/elections_functions.js"></script>
