--- a/pages/main/elections.html
+++ b/pages/main/elections.html
@@ -21,11 +21,12 @@
         <div class="dropdown">
             <button class="electionButtons" >More</button>
             <div class="dropdown-content">
-                <a onclick=load1867Election()>1867</a>
-                <a onclick=load1872Election()>1872</a>
-                <a onclick=load1874Election()>1874</a>
-                <a onclick=load2019Election()>2019</a>
-                <a onclick=load2021Election()>2021</a>
+                <a onclick="loadElection('1867')">1867</a>
+                <a onclick="loadElection('1872')">1872</a>
+                <a onclick="loadElection('1874')">1874</a>
+                <a onclick="loadElection('1878')">1878</a>
+                <a onclick="loadElection('2019')">2019</a>
+                <a onclick="loadElection('2021')">2021</a>
             </div>
         </div>
         <div>
