--- a/pages/main/about.html
+++ b/pages/main/about.html
@@ -11,7 +11,7 @@
             Created by Matthew Shirazi, B. Eng
         </p>
         <p class="aboutParagraph">
-            Huge thanks to Dr. Jack Lucas, Dr. Zach Taylor, and Dr. Dave Armstrong and their team for creating and publishing the shapefiles for every federal district of every election in Canadian history.
+            Huge thanks to Dr. Jack Lucas, Dr. Zach Taylor, and their team for creating and publishing the shapefiles for every federal district of every election in Canadian history.
         </p>
         <a class="aboutParagraph" href="https://borealisdata.ca/file.xhtml?fileId=449029&version=2.0" target="_blank">
             You can find their data here
@@ -22,6 +22,14 @@
         <p class="aboutParagraph">
             If you notice a mistake, please send an email to support@canadianelections.net
         </p>
+    </div>
+    <div>
+        <footer class="footer">
+            <p class="aboutParagraph"></p>
+                Data retreived from: <br></br>
+                <i>Taylor, Zachary; Lucas, Jack; Kirby, J.P.; Hewitt, Christopher Macdonald, 2023, "Replication Data for “Canada’s Federal Electoral Districts, 1867–2021: New Digital Boundary Files and a Comparative Investigation of District Compactness.” Canadian Journal of Political Science.", https://doi.org/10.5683/SP3/4E8DCR, Borealis, V2; fedshapes_cbf_20221003.zip</i>
+            </p>
+        </footer>
     </div>
 </body>
 </html>
