Added 1882 federal election, streamlined pull_voting_data.py. Voting data is now almost completely automated

--- a/pages/main/elections.html
+++ b/pages/main/elections.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Maps for all Canadian elections, see results for a federal election">
-    <meta name="keywords" content="canadian, elections, maps, 1867, 1872, 1874, 2019, 2021, federal, results">
+    <meta name="keywords" content="canadian, elections, maps, 1867, 1872, 1874, 1882, 2019, 2021, federal, results">
     <title>Canadian Elections</title>
     <link rel="stylesheet" href="/main/elections_style.css">
     <script src="/main/elections_functions.js"></script>
@@ -25,6 +25,7 @@
                 <a onclick="loadElection('1872')">1872</a>
                 <a onclick="loadElection('1874')">1874</a>
                 <a onclick="loadElection('1878')">1878</a>
+                <a onclick="loadElection('1882')">1882</a>
                 <a onclick="loadElection('2019')">2019</a>
                 <a onclick="loadElection('2021')">2021</a>
             </div>
