Fixed 1867 and 2021 buttons in the banner

--- a/pages/main/elections.html
+++ b/pages/main/elections.html
@@ -13,10 +13,10 @@
     <div id="mainBanner">
             <button id="homeButton">Canadian Elections</button>
         <div>
-            <button class="electionButtons" onclick=load1867Election()>1867</button>
+            <button class="electionButtons" onclick="loadElection('1867')">1867</button>
         </div>
         <div>
-            <button class="electionButtons" onclick=load2021Election()>2021</button>
+            <button class="electionButtons" onclick="loadElection('2021')">2021</button>
         </div>
         <div class="dropdown">
             <button class="electionButtons" >More</button>
