Updated all txt files to have the full party names, added 1887 election

--- a/pages/main/about.html
+++ b/pages/main/about.html
@@ -20,13 +20,13 @@
             For newer elections (2019 and 2021), voting data and shapefiles were retreived from Elections Canada.
         </p>
         <p class="aboutParagraph">
-            If you notice a mistake, please send an email to support@canadianelections.net
+            If you notice a mistake, please send an email to support@canadianelections.net!
         </p>
     </div>
     <div>
         <footer class="footer">
             <p class="aboutParagraph"></p>
-                Data retreived from: <br></br>
+                1800s election data retreived from: <br></br>
                 <i>Taylor, Zachary; Lucas, Jack; Kirby, J.P.; Hewitt, Christopher Macdonald, 2023, "Replication Data for “Canada’s Federal Electoral Districts, 1867–2021: New Digital Boundary Files and a Comparative Investigation of District Compactness.” Canadian Journal of Political Science.", https://doi.org/10.5683/SP3/4E8DCR, Borealis, V2; fedshapes_cbf_20221003.zip</i>
             </p>
         </footer>
