--- a/pages/main/elections.html
+++ b/pages/main/elections.html
@@ -29,6 +29,7 @@
                 <a onclick="loadElection('1887')">1887</a>
                 <a onclick="loadElection('1891')">1891</a>
                 <a onclick="loadElection('1896')">1896</a>
+                <a onclick="loadElection('1900')">1900</a>
                 <a onclick="loadElection('2019')">2019</a>
                 <a onclick="loadElection('2021')">2021</a>
             </div>
