Added favicons to the web app.

--- a/pages/main/elections.html
+++ b/pages/main/elections.html
@@ -8,6 +8,10 @@
     <title>Canadian Election Maps</title>
     <link rel="stylesheet" href="/main/elections_style.css">
     <script src="/main/elections_functions.js"></script>
+    <link rel="apple-touch-icon" sizes="180x180" href="/main/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/main/favicon/favicon-32x32.png?v=2">
+    <link rel="icon" type="image/png" sizes="16x16" href="/main/favicon/favicon-16x16.png?v=2">
+    <link rel="icon" type="image/x-icon" sizes="any" href="/main/favicon/favicon.ico?v=2">
 </head>
 <body>
     <div id="mainBanner">
