--- a/pages/main/about.html
+++ b/pages/main/about.html
@@ -26,7 +26,7 @@
     <div>
         <footer class="footer">
             <p class="aboutParagraph"></p>
-                1800s election data retreived from: <br></br>
+                Pre-2019 federal district shape data retreived from: <br></br>
                 <i>Taylor, Zachary; Lucas, Jack; Kirby, J.P.; Hewitt, Christopher Macdonald, 2023, "Replication Data for “Canada’s Federal Electoral Districts, 1867–2021: New Digital Boundary Files and a Comparative Investigation of District Compactness.” Canadian Journal of Political Science.", https://doi.org/10.5683/SP3/4E8DCR, Borealis, V2; fedshapes_cbf_20221003.zip</i>
             </p>
         </footer>
