--- a/pages/main/about.html
+++ b/pages/main/about.html
@@ -11,11 +11,8 @@
             Created by Matthew Shirazi, B. Eng
         </p>
         <p class="aboutParagraph">
-            Huge thanks to Dr. Jack Lucas, Dr. Zach Taylor, and their team for creating and publishing the shapefiles for every federal district of every election in Canadian history.
+            This project was created using Docker, Kubernetes, Python, HTML, CSS, and JavaScript. The website runs entirely in a container on a Linux virtual machine.
         </p>
-        <a class="aboutParagraph" href="https://borealisdata.ca/file.xhtml?fileId=449029&version=2.0" target="_blank">
-            You can find their data here
-        </a>
         <p class="aboutParagraph">
             For newer elections (2019 and 2021), voting data and shapefiles were retreived from Elections Canada.
         </p>
