Added 1925 election, updated pull_voting_data_updated.py. Fixed error in 1921 voting data.

--- a/pages/main/about.html
+++ b/pages/main/about.html
@@ -14,7 +14,7 @@
             This project was created using Docker, Kubernetes, Python, HTML, CSS, and JavaScript. The website runs entirely in a container on a Linux virtual machine.
         </p>
         <p class="aboutParagraph">
-            For newer elections (2019 and 2021), voting data and shapefiles were retreived from Elections Canada.
+            For newer elections (2019 and 2021), voting data and shapefiles were retreived from Elections Canada. For elections prior to 2019, voting data was retrieved from the Library of Parliament.
         </p>
         <p class="aboutParagraph">
             If you notice a mistake, please send an email to support@canadianelections.net!
