--- a/pages/main/elections.html
+++ b/pages/main/elections.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="View interactive maps for all Canadian elections from 1867 to 1921, 2019, and 2021">
-    <meta name="keywords" content="canadian, elections, maps, 1867, 1872, 1874, 1882, 1887, 1891, 1896, 1900, 1904, 1908, 1911, 1917, 1921, 2019, 2021, federal, results, interactive, canada">
+    <meta name="description" content="View interactive maps for all Canadian elections from 1867 to 1925, 2019, and 2021">
+    <meta name="keywords" content="canadian, elections, maps, 1867, 1872, 1874, 1882, 1887, 1891, 1896, 1900, 1904, 1908, 1911, 1917, 1921, 1925, 2019, 2021, federal, results, interactive, canada">
     <title>Canadian Election Maps</title>
     <link rel="stylesheet" href="/main/elections_style.css">
     <script src="/main/elections_functions.js"></script>
@@ -39,6 +39,7 @@
                 <a onclick="loadElection('1911')">1911</a>
                 <a onclick="loadElection('1917')">1917</a>
                 <a onclick="loadElection('1921')">1921</a>
+                <a onclick="loadElection('1925')">1925</a>
                 <a onclick="loadElection('2019')">2019</a>
                 <a onclick="loadElection('2021')">2021</a>
             </div>
