--- a/pages/main/elections.html
+++ b/pages/main/elections.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="View interactive maps for all Canadian elections from 1867 to 1925, 2019, and 2021">
-    <meta name="keywords" content="canadian, elections, maps, 1867, 1872, 1874, 1882, 1887, 1891, 1896, 1900, 1904, 1908, 1911, 1917, 1921, 1925, 2019, 2021, federal, results, interactive, canada">
+    <meta name="description" content="View interactive maps for all Canadian elections from 1867 to 1926, 2019, and 2021">
+    <meta name="keywords" content="canadian, elections, maps, 1867, 1872, 1874, 1882, 1887, 1891, 1896, 1900, 1904, 1908, 1911, 1917, 1921, 1925, 1926, 2019, 2021, federal, results, interactive, canada">
     <title>Canadian Election Maps</title>
     <link rel="stylesheet" href="/main/elections_style.css">
     <script src="/main/elections_functions.js"></script>
     <link rel="apple-touch-icon" sizes="180x180" href="/main/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/main/favicon/favicon-32x32.png?v=2">
-    <link rel="icon" type="image/png" sizes="16x16" href="/main/favicon/favicon-16x16.png?v=2">
-    <link rel="icon" type="image/x-icon" sizes="any" href="/main/favicon/favicon.ico?v=2">
+    <link rel="icon" type="image/png" sizes="32x32" href="/main/favicon/favicon-32x32.png?v=3">
+    <link rel="icon" type="image/png" sizes="16x16" href="/main/favicon/favicon-16x16.png?v=3">
+    <link rel="icon" type="image/x-icon" sizes="any" href="/main/favicon/favicon.ico?v=3">
 </head>
 <body>
     <div id="mainBanner">
@@ -40,6 +40,7 @@
                 <a onclick="loadElection('1917')">1917</a>
                 <a onclick="loadElection('1921')">1921</a>
                 <a onclick="loadElection('1925')">1925</a>
+                <a onclick="loadElection('1926')">1926</a>
                 <a onclick="loadElection('2019')">2019</a>
                 <a onclick="loadElection('2021')">2021</a>
             </div>
