Updated description in elections.html

--- a/pages/main/elections.html
+++ b/pages/main/elections.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="View interactive maps for all Canadian elections from 1867 to 1935, 2019, and 2021">
+    <meta name="description" content="View an interactive map for any Canadian election from 1867 to 1935, 2019, and 2021. 
+    See maps of results for past Canadian elections.">
     <meta name="keywords" content="canadian, elections, maps, 1867, 1872, 1874, 1882,
      1887, 1891, 1896, 1900, 1904, 1908, 1911, 1917, 1921, 1925, 1926,
      1930, 1935, 2019, 2021, federal, results, interactive, canada">
