--- a/pages/main/elections.html
+++ b/pages/main/elections.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="View an interactive map for any Canadian election from 1867 to 1940, 2019, and 2021. 
+    <meta name="description" content="View an interactive map for any Canadian election from 1867 to 1945, 2019, and 2021. 
     See maps of results for past Canadian elections.">
     <meta name="keywords" content="canadian, elections, maps, 1867, 1872, 1874, 1882,
      1887, 1891, 1896, 1900, 1904, 1908, 1911, 1917, 1921, 1925, 1926,
-     1930, 1935, 1940, 2019, 2021, federal, results, interactive, canada">
+     1930, 1935, 1940, 1945, 2019, 2021, federal, results, interactive, canada">
     <title>Canadian Election Maps</title>
     <link rel="stylesheet" href="/main/elections_style.css">
     <script src="/main/elections_functions.js"></script>
@@ -47,6 +47,7 @@
                 <a onclick="loadElection('1930')">1930</a>
                 <a onclick="loadElection('1935')">1935</a>
                 <a onclick="loadElection('1940')">1940</a>
+                <a onclick="loadElection('1945')">1945</a>
                 <a onclick="loadElection('2019')">2019</a>
                 <a onclick="loadElection('2021')">2021</a>
             </div>
