Added the 1972 election

--- a/pages/main/about.html
+++ b/pages/main/about.html
@@ -7,7 +7,7 @@
     See maps of results for past Canadian federal elections.">
     <meta name="keywords" content="canadian, elections, maps, 1867, 1872, 1874, 1882,
      1887, 1891, 1896, 1900, 1904, 1908, 1911, 1917, 1921, 1925, 1926,
-     1930, 1935, 1940, 1945, 1949, 1953, 1957, 1958, 1962, 1963, 1965, 1968, 2019, 2021, federal, results, 
+     1930, 1935, 1940, 1945, 1949, 1953, 1957, 1958, 1962, 1963, 1965, 1968, 1972, 2019, 2021, federal, results, 
      interactive, canada">
     <title>Canadian Elections | About</title>
     <link rel="stylesheet" href="elections_style.css">
@@ -57,6 +57,7 @@
                 <a onclick="loadElection('1963')">1963</a>
                 <a onclick="loadElection('1965')">1965</a>
                 <a onclick="loadElection('1968')">1968</a>
+                <a onclick="loadElection('1972')">1972</a>
                 <a onclick="loadElection('2019')">2019</a>
                 <a onclick="loadElection('2021')">2021</a>
             </div>
