Added the 1979 election

--- a/pages/main/about.html
+++ b/pages/main/about.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="canadian, elections, maps, 1867, 1872, 1874, 1882,
      1887, 1891, 1896, 1900, 1904, 1908, 1911, 1917, 1921, 1925, 1926,
      1930, 1935, 1940, 1945, 1949, 1953, 1957, 1958, 1962, 1963, 1965, 
-     1968, 1972, 1974, 2019, 2021, federal, results, 
+     1968, 1972, 1974, 1979, 2019, 2021, federal, results, 
      interactive, canada">
     <title>Canadian Elections | About</title>
     <link rel="stylesheet" href="elections_style.css">
@@ -60,6 +60,7 @@
                 <a onclick="loadElection('1968')">1968</a>
                 <a onclick="loadElection('1972')">1972</a>
                 <a onclick="loadElection('1974')">1974</a>
+                <a onclick="loadElection('1979')">1979</a>
                 <a onclick="loadElection('2019')">2019</a>
                 <a onclick="loadElection('2021')">2021</a>
             </div>
